crackdeal-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: crackdeal-ns
  labels:
    name: crackdeal-ns
    istio-injection: enabled
