ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: crackdeal-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: crackdeal.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end-srv
                port:
                  number: 3000
          - path: /product/*
            pathType: Prefix
            backend:
              service:
                name: product-srv
                port:
                  number: 8081
          - path: /v1/search/*
            pathType: Prefix
            backend:
              service:
                name: search-srv
                port:
                  number: 8082
          - path: /auth/*
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 8001
          - path: /order/*
            pathType: Prefix
            backend:
              service:
                name: order-srv
                port:
                  number: 8002
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: front-end-srv
                port:
                  number: 3000
